<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    
    <!--Buttons-->
    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_text"
            android:onClick="deleteLastEntry" />

        <Button
            android:id="@+id/flush_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flush_text"
            android:onClick="flushSpaceTimeCoordinates"/>

        <Button
            android:id="@+id/export_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_text"
            android:onClick="createLogFile"/>

    </LinearLayout>

    <!--Header row-->
    <TableLayout
        android:id="@+id/header_row_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_buttons">

        <TableRow
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_column_header"
                android:layout_column="0"
                android:layout_weight="0.7" />
            <TextView
                android:text="@string/x_coordinate_column_header"
                android:layout_column="1"
                android:layout_weight="1" />
            <TextView
                android:text="@string/y_coordinate_column_header"
                android:layout_column="2"
                android:layout_weight="1" />
            <TextView
                android:text="@string/time_column_header"
                android:layout_column="3"
                android:layout_weight="1" />
        </TableRow>


    </TableLayout>


    <!--The table-->
    <ScrollView
        android:id="@+id/table_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_row_table"
        android:layout_above="@+id/trigger_container"
        android:onClick="triggerSpaceTimeRecording" >

        <TableLayout
            android:id="@+id/space_time_rows"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >


        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/trigger_container"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/trigger_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/trigger_text"
            android:onClick="triggerSpaceTimeRecording" />

    </LinearLayout>

</RelativeLayout>
